sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:12: error: illegal start of simple expression
  }
  ^AlgBubbleSort1:14: error: 'while' expected but '}' found.
} 
^